--- a/index.html
+++ b/index.html
@@ -4,106 +4,129 @@
         <meta charset="utf-8">
         <title>Survey Form</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
         <main id="main">
             <!--  Title and Caption -->
-            <h1 id="title">freeCodeCamp Survey Form</h1>
-            <p id="description"><i>Thank you for taking the time to help us improve the platform</i></p>
+            <div class="title-caption-div">
+                <h1 id="title">freeCodeCamp Survey Form</h1>
+                <p id="description"><i>Thank you for taking the time to help us improve the platform</i></p>
+            </div>
 
             <!-- Survey Form -->
             <form id="survey-form" action="index.html" method="post">
                 <!-- Name Text Input -->
-                <label for="name" id=name-label>Name</label><br>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required><br>
+                <div class="name-input-div">
+                    <label for="name" id=name-label>Name</label><br>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                </div>
 
                 <!-- Email Text Input -->
-                <label for="email" id="email-label">Email</label><br>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required><br>
+                <div class="email-input-div">
+                    <label for="email" id="email-label">Email</label><br>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                </div>
 
                 <!-- Age Text Input -->
-                <label for="number" id="number-label">Age (Optional)</label><br>
-                <input type="number" id="number" name="age" placeholder="Enter your age" min="0" max="99"><br>
+                <div class="age-input-div">
+                    <label for="number" id="number-label">Age (Optional)</label><br>
+                    <input type="number" id="number" name="age" placeholder="Enter your age" min="0" max="99">
+                </div>
+
 
                 <!-- Current Role Dropdown Input -->
-                <label for="dropdown">Which option best defines your current role?</label><br>
-                <select id="dropdown" name="current-role" required>
-                    <optgroup label="Select current role">
-                        <option  id="dropdown" value="" selected disabled hidden>Select current role</option>
-                        <option value="student">Student</option>
-                        <option value="full time job">Full Time Job</option>
-                        <option value="full time learner">Full Time Learner</option>
-                        <option value="prefer not to say">Prefer Not To Say</option>
-                        <option value="other">other</option>
-                    </optgroup>
-                </select>
+                <div class="current-role-div">
+                    <label for="dropdown">Which option best defines your current role?</label><br>
+                    <select id="dropdown" name="current-role" required>
+                        <optgroup label="Select current role">
+                            <option  id="dropdown" value="" selected disabled hidden>Select current role</option>
+                            <option value="student">Student</option>
+                            <option value="full time job">Full Time Job</option>
+                            <option value="full time learner">Full Time Learner</option>
+                            <option value="prefer not to say">Prefer Not To Say</option>
+                            <option value="other">other</option>
+                        </optgroup>
+                    </select>
+                </div>
 
-                <!-- Would You Reccomend Radio Inputs -->
-                <p>Would you recommend freeCodeCamp to a friend?</p>
+                <!-- Would You Recommend Radio Inputs -->
+                <div class="recommend-div">
+                    <p id="recommend-p">Would you recommend freeCodeCamp to a friend?</p>
 
-                <input type="radio" name="recommend" value="Definitely" id="recommend-choice-1">
-                <label for="recommend-choice-1">Definitely</label><br>
+                    <input type="radio" name="recommend" value="Definitely" id="recommend-choice-1">
+                    <label for="recommend-choice-1">Definitely</label><br>
 
-                <input type="radio" name="recommend" value="Maybe" id="recommend-choice-2">
-                <label for="recommend-choice-2">Maybe</label><br>
+                    <input type="radio" name="recommend" value="Maybe" id="recommend-choice-2">
+                    <label for="recommend-choice-2">Maybe</label><br>
 
-                <input type="radio" name="recommend" value="Not sure" id="recommend-choice-3">
-                <label for="recommend-choice-3">Not sure</label><br>
+                    <input type="radio" name="recommend" value="Not sure" id="recommend-choice-3">
+                    <label for="recommend-choice-3">Not sure</label><br>
+                </div>
+
 
                 <!-- Favorite Feature Dropdown Input -->
-                <label for="favorite-feature">What is your favorite feature of freeCodeCamp?</label><br>
-                <select id="favorite-feature" name="favorite-feature" required>
-                    <optgroup label="Select favorite feature">
-                        <option value="" selected disabled hidden>Select favorite feature</option>
-                        <option value="challenges">Challenges</option>
-                        <option value="projects">Projects</option>
-                        <option value="community">Community</option>
-                        <option value="open source">Open Source</option>
-                    </optgroup>
-                </select>
+                <div class="favorite-feature-div">
+                    <label for="favorite-feature">What is your favorite feature of freeCodeCamp?</label><br>
+                    <select id="favorite-feature" name="favorite-feature" required>
+                        <optgroup label="Select favorite feature">
+                            <option value="" selected disabled hidden>Select favorite feature</option>
+                            <option value="challenges">Challenges</option>
+                            <option value="projects">Projects</option>
+                            <option value="community">Community</option>
+                            <option value="open source">Open Source</option>
+                        </optgroup>
+                    </select>
+                </div>
 
                 <!-- What Would You Improve Checkbox Input -->
-                <p>What would you like to see improved? (Check all that apply)</p>
-                    <!-- Front-end Projects Checkbox -->
-                <input type="checkbox" id="improvement-1" value="improvement-choice"/>
-                <label for="improvement-1">Front-end Projects</label><br>
-                    <!-- Back-end Projects Checkbox -->
-                <input type="checkbox" id="improvement-2" value="improvement-choice"/>
-                <label for="improvement-2">Back-end Projects</label><br>
-                    <!-- Data Visualization Checkbox -->
-                <input type="checkbox" id="improvement-3" value="improvement-choice"/>
-                <label for="improvement-3">Data Visualization</label><br>
-                    <!-- Challenges Checkbox -->
-                <input type="checkbox" id="improvement-4" value="improvement-choice"/>
-                <label for="improvement-4">Challenges</label><br>
-                    <!-- Open Source Community Checkbox -->
-                <input type="checkbox" id="improvement-5" value="improvement-choice"/>
-                <label for="improvement-5">Open Source Community</label><br>
-                    <!-- Gitter Help Rooms Checkbox -->
-                <input type="checkbox" id="improvement-6" value="improvement-choice"/>
-                <label for="improvement-6">Gitter Help Rooms</label><br>
-                    <!-- Videos Checkbox -->
-                <input type="checkbox" id="improvement-7" value="improvement-choice"/>
-                <label for="improvement-7">Videos</label><br>
-                    <!-- City Meetups Checkbox -->
-                <input type="checkbox" id="improvement-8" value="improvement-choice"/>
-                <label for="improvement-8">City Meetups</label><br>
-                    <!-- Wiki Checkbox -->
-                <input type="checkbox" id="improvement-9" value="improvement-choice"/>
-                <label for="improvement-9">Wiki</label><br>
-                    <!-- Forums Checkbox -->
-                <input type="checkbox" id="improvement-10" value="improvement-choice"/>
-                <label for="improvement-10">Forum</label><br>
-                    <!-- Additional Courses Checkbox -->
-                <input type="checkbox" id="improvement-11" value="improvement-choice"/>
-                <label for="improvement-11">Additional Courses</label><br>
-                
+                <div class="improvement-div">
+                    <p id="improvement-p">What would you like to see improved? (Check all that apply)</p>
+                        <!-- Front-end Projects Checkbox -->
+                    <input type="checkbox" id="improvement-1" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-1">Front-end Projects</label><br>
+                        <!-- Back-end Projects Checkbox -->
+                    <input type="checkbox" id="improvement-2" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-2">Back-end Projects</label><br>
+                        <!-- Data Visualization Checkbox -->
+                    <input type="checkbox" id="improvement-3" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-3">Data Visualization</label><br>
+                        <!-- Challenges Checkbox -->
+                    <input type="checkbox" id="improvement-4" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-4">Challenges</label><br>
+                        <!-- Open Source Community Checkbox -->
+                    <input type="checkbox" id="improvement-5" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-5">Open Source Community</label><br>
+                        <!-- Gitter Help Rooms Checkbox -->
+                    <input type="checkbox" id="improvement-6" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-6">Gitter Help Rooms</label><br>
+                        <!-- Videos Checkbox -->
+                    <input type="checkbox" id="improvement-7" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-7">Videos</label><br>
+                        <!-- City Meetups Checkbox -->
+                    <input type="checkbox" id="improvement-8" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-8">City Meetups</label><br>
+                        <!-- Wiki Checkbox -->
+                    <input type="checkbox" id="improvement-9" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-9">Wiki</label><br>
+                        <!-- Forums Checkbox -->
+                    <input type="checkbox" id="improvement-10" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-10">Forum</label><br>
+                        <!-- Additional Courses Checkbox -->
+                    <input type="checkbox" id="improvement-11" value="improvement-choice" name="improvement-choice"/>
+                    <label for="improvement-11">Additional Courses</label><br>
+                </div>
+
                 <!-- Comments / Suggestions Textarea -->
-                <label for="">Any comments or suggestions? (Optional)</label><br>
-                <textarea name="name" rows="4" cols="80"></textarea><br>
+                <div class="comments-div">
+                    <label for="">Any comments or suggestions? (Optional)</label><br>
+                    <textarea name="name" rows="4" cols="80" placeholder="Enter your comment here..."></textarea>
+                </div>
 
                 <!-- Submit Button -->
-                <button type="submit" id="submit" name="submit-button">Submit</button>
+                <div class="button-div">
+                    <button type="submit" id="submit" name="submit-button">Submit</button>
+                </div>
             </form>
         </main>
     </body>
